--- a/01.01.hello.html
+++ b/01.01.hello.html
@@ -10,22 +10,7 @@
     </div>
     <script src="build/react.js"></script>
     <script src="build/react-dom.js"></script>
-    <script>
-      var Component = React.createClass({
-        render: function() {
-          return React.DOM.span(null, "I'm so custom");
-        }
-      });
-
-      var ComponentFactory = React.createFactory(Component);
-
-      ReactDOM.render(
-        ComponentFactory({
-          name: "Bob",
-        }),
-        document.getElementById("app")
-      );
-    </script>
+    <script src="js/myreact.js"></script>
   </body>
 </html>
 
