workon on Excel example, finished header and content showup

--- a/01.03.hello.html
+++ b/01.03.hello.html
@@ -10,7 +10,7 @@
     </div>
     <script src="build/react-with-addons.js"></script>
     <script src="build/react-dom.js"></script>
-    <script src="js/myreact.js"></script>
+    <script src="js/fancy_table.js"></script>
   </body>
 </html>
 
